added autostart entry

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,2 +1,7 @@
 
 SUBDIRS = src
+
+autostartdir = $(sysconfdir)/xdg/autostart
+autostart_DATA = xiccd-autostart.desktop
+
+EXTRA_DIST = $(autostart_in_files)
